# azure-iot-sdk-c

./: .gitignore  .gitmodules  CMakeLists.txt  dirs
build_all/android/AndroidStudio/app/: CMakeLists.txt  build.gradle
build_all/android/AndroidStudio/app/src/main/: AndroidManifest.xml
build_all/android/AndroidStudio/app/src/main/cpp/: native-lib.cpp  sample_mqtt.c
build_all/android/AndroidStudio/app/src/main/res/layout/: activity_main.xml
build_all/arduino/: Makefile.iot
build_all/arduino_cc/: make_sdk.cmd
build_all/arduino_cc/base-libraries/AzureIoTHub/: README.md
build_all/arduino_cc/base-libraries/AzureIoTProtocol_HTTP/: README.md
build_all/arduino_cc/base-libraries/AzureIoTProtocol_MQTT/: README.md
build_all/arduino_cc/base-libraries/AzureIoTUtility/: README.md
build_all/arduino_cc/readme-generator/: .gitignore  build_readmes.ps1  code_of_conduct_fragment.md  contributor_not_here.md  contributor_yes.md  license_fragment.md  main_body_fragment.md  readme.md  title_http_fragment.md  title_hub_fragment.md  title_mqtt_fragment.md  title_utility_fragment.md
build_all/esp8266/: Makefile  README.md  aa  aa.sh  build.sh  construct_build_tree.sh  copy_iot_files.sh  copy_iot_lib_files.sh  copy_iot_sample_files.sh  gen_misc.sh  make_build_tree.sh  sdk_fix.sh
build_all/esp8266/azure-iot/: Makefile
build_all/esp8266/azure-iot/test/: test.c
build_all/esp8266/azure_iot/: Makefile  frog.c
build_all/esp8266/sample_lib/: Makefile
build_all/esp8266/sample_lib/folder1/: Makefile
build_all/esp8266/sample_lib/folder1/test/: test2.c
build_all/esp8266/user/: Makefile  user_main.c  wifi_config.h
build_all/ios/: iOS.cmake
configs/: azure_iot_sdksFunctions.cmake
dps_service_client/devdoc/requirement_docs/: dps_sc_client_requirements.md
dps_service_client/samples/dps_sc_sample/: CMakeLists.txt  dps_sc_sample.c
iothub_client/: CMakeLists.txt  dirs
iothub_client/devdoc/requirement_docs/: uamqp_messaging_requirements.md
iothub_client/inc/: iothub_client_private.h
iothub_client/samples/: dirs
iothub_client/samples/iothub_client_sample_amqp/: iothub_client_sample_amqp.c  sources
iothub_client/samples/iothub_client_sample_amqp_websockets/: iothub_client_sample_amqp_websockets.c
iothub_client/samples/iothub_client_sample_http/: CMakeLists.txt  iothub_client_sample_http.c
iothub_client/samples/iothub_client_sample_mqtt/: CMakeLists.txt  iothub_client_sample_mqtt.c  sources
iothub_client/samples/iothub_client_sample_mqtt_esp8266/: CMakeLists.txt
iothub_client/samples/iothub_client_sample_upload_to_blob/: iothub_client_sample_upload_to_blob.c
iothub_client/src/: blob.c  iothub_client_ll.c  iothub_client_ll_uploadtoblob.c  iothub_client_mqtt_transport.def  iothubtransport_amqp_common.c  iothubtransport_mqtt_common.c  iothubtransportamqp.c  iothubtransportamqp_methods.c  sources  uamqp_messaging.c
iothub_client/tests/common_e2e/: iothubclient_common_e2e.c
iothub_client/tests/uamqp_messaging_ut/: uamqp_messaging_ut.c
iothub_client_amqp_transport/src/: iothubtransport_amqp_common.c  iothubtransportamqp.c  iothubtransportamqp_auth.c  iothubtransportamqp_methods.c  sources  uamqp_messaging.c
iothub_client_mqtt_transport/: dirs
iothub_client_mqtt_transport/src/: iothubtransport_mqtt_common.c  iothubtransportmqtt.c  sources
iothub_service_client/: CMakeLists.txt
jenkins/: arduino_cc.cmd  esp8266_c.sh
secure_storage_adapter/inc/: c_sdk_secure_storage_architecture.vsdx  secure_storage_authenticator.h
serializer/: CMakeLists.txt
serializer/samples/: CMakeLists.txt
serializer/samples/devicemethod_simplesample/: CMakeLists.txt  devicemethod_simplesample.c
serializer/samples/devicetwin_simplesample/: CMakeLists.txt
serializer/samples/simplesample_amqp/: simplesample_amqp.c
serializer/samples/simplesample_mqtt/: CMakeLists.txt
serializer/samples/whober_car/: CMakeLists.txt  LL_whober_car.c  whober_car.c
serializer/samples/whober_rider/: CMakeLists.txt  whober_rider.c  whober_rider.h
testtools/iothub_test/src/: iothub_account.c
tools/CACertificates/: CACertificateOverview.md
